# uri-reader

./: Cargo.toml  README.md
src/: error.rs  http.rs  lib.rs  test.rs
