[package]
name = "uri-reader"
version = "0.1.0"
authors = ["abrahum<307887491@qq.com>"]
description = "A simple URI reader"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = ["hyper-tls/vendored"]

[dependencies]
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = "0.5"
base64 = "0.13"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util"] }
