[package]
name = "uri-reader"
version = "0.1.0"
authors = ["abrahum<307887491@qq.com>"]
description = "A simple URI reader"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = ["hyper-tls/vendored"]
rustls = ["hyper-rustls"]

[dependencies]
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = "0.5"
base64 = "0.21"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util"] }
hyper-rustls = { version = "0.24.*", optional = true }

[dev-dependencies]
tokio = { version = "*", features = ["full"] }
